--- a/LouisV1/LouisV1/Base.lproj/Main.storyboard
+++ b/LouisV1/LouisV1/Base.lproj/Main.storyboard
@@ -185,7 +185,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="EqA-hL-IsS"/>
+        <segue reference="7ny-3E-Ofq"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="IMG_2998" width="2316" height="3088"/>
